# wonder

./: README.md  pyproject.toml
wonder/: api.py  main.py  run_job_search.py
wonder/computer_use_demo/: loop.py
wonder_multiagent/: README.md  pyproject.toml
wonder_multiagent/src/wonder_multiagent/: crew.py  main.py  memory.py
wonder_multiagent/src/wonder_multiagent/config/: agents.yaml  tasks.yaml
wonder_multiagent/src/wonder_multiagent/tools/: exa_search_tool.py  hacker_news_scraper_tool.py  resume_read_tool.py  resume_read_util.py  url_validator_tool.py
wonder_webapp/: package.json  pnpm-lock.yaml
wonder_webapp/app/: breadcrumb.tsx  globals.css  layout.tsx  page.tsx
wonder_webapp/app/api/: route.ts
wonder_webapp/app/api/submit-preferences/: route.ts
wonder_webapp/app/jobs/: data.tsx  job-display.tsx  job-list.tsx  job.tsx  page.tsx  use-job.ts  use-job.tsx
wonder_webapp/app/preferences/: page.tsx
wonder_webapp/components/ui/: badge.tsx
