[project]
name = "wonder_multiagent"
version = "0.1.0"
description = "wonder_multiagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[agentops,tools]>=0.83.0,<1.0.0",
    "ruff>=0.8.1",
]

[project.scripts]
wonder_multiagent = "wonder_multiagent.main:run"
run_crew = "wonder_multiagent.main:run"
train = "wonder_multiagent.main:train"
replay = "wonder_multiagent.main:replay"
test = "wonder_multiagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
